# paper_changer

./: .gitignore  README.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  events.rs  main.rs  wallpaper.rs  wallpaper_engine.rs
