[package]
name = "paper_changer"
version = "0.0.1"
description = "A small program to interact with linux-wallpaper-engine graphically"
authors = ["FlashOnFire_"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
steamworks = {version = "0.10.0", features = ["serde"] }
tokio = { version = "1.29.1", features = ["full"] }
xrandr-parser = "0.3.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
